[gd_scene load_steps=12 format=3 uid="uid://6ouofsbi6e1y"]

[ext_resource type="PackedScene" uid="uid://4qpsxc5tqw1v" path="res://Dialogue Scenes & Scripts/dialogue_container.tscn" id="1_623br"]
[ext_resource type="Theme" uid="uid://b3ou7d8b0fupu" path="res://main_theme.tres" id="1_kbdt3"]
[ext_resource type="ButtonGroup" uid="uid://cvjxxqlcxfaln" path="res://InteractionPanelButtonGroup.tres" id="2_kbdt3"]
[ext_resource type="Script" uid="uid://pmty4ay0wek4" path="res://interaction_panel.gd" id="2_tgwp7"]
[ext_resource type="PackedScene" uid="uid://dwsxd5ttvjxsu" path="res://Assets/E127_orbital.tscn" id="3_8ofs5"]
[ext_resource type="PackedScene" uid="uid://do8gbvq05s7vo" path="res://Assets/namurant_profile.tscn" id="4_g8ts6"]
[ext_resource type="Script" uid="uid://bbds716d4p140" path="res://interaction_panel_button.gd" id="4_pynfl"]
[ext_resource type="PackedScene" uid="uid://dygaid8lgxbhk" path="res://Assets/s_profile.tscn" id="5_tgwp7"]
[ext_resource type="PackedScene" uid="uid://8fmrvoi5rg7i" path="res://Assets/xaragiln_profile.tscn" id="6_m4g6a"]
[ext_resource type="Resource" uid="uid://ehd83347tq5t" path="res://Assets/Dialogue/Baluma_Intro.tres" id="9_3j4wn"]
[ext_resource type="Resource" uid="uid://y2mdv3li8efv" path="res://Assets/Dialogue/Kiki_Intro.tres" id="10_pynfl"]

[node name="InteractionPanel" type="Control"]
layout_mode = 3
anchor_left = 0.426
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -490.752
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kbdt3")
script = ExtResource("2_tgwp7")
person_buttons = ExtResource("2_kbdt3")
metadata/_edit_vertical_guides_ = [491.0]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.483
anchor_top = 0.012
anchor_right = 0.644
anchor_bottom = 0.988
offset_left = -36.416
offset_top = 0.224
offset_right = 0.112
offset_bottom = -0.223999
grow_vertical = 2
theme_override_constants/separation = 80

[node name="Minthe" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(186, 98)
layout_mode = 2
size_flags_horizontal = 8
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_kbdt3")
script = ExtResource("4_pynfl")

[node name="E127 Orbital" parent="VBoxContainer/Minthe" instance=ExtResource("3_8ofs5")]
position = Vector2(49, 49)
scale = Vector2(0.5, 0.5)
colour = Color(0.175548, 0.41, 0.1107, 1)

[node name="Baluma" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(186, 98)
layout_mode = 2
size_flags_horizontal = 8
toggle_mode = true
button_group = ExtResource("2_kbdt3")
script = ExtResource("4_pynfl")

[node name="Namurant Profile" parent="VBoxContainer/Baluma" instance=ExtResource("4_g8ts6")]
position = Vector2(49, 49)
scale = Vector2(0.5, 0.5)
colour = Color(0.427451, 0.443137, 0.964706, 1)

[node name="Kiki" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(186, 98)
layout_mode = 2
size_flags_horizontal = 8
toggle_mode = true
button_group = ExtResource("2_kbdt3")
script = ExtResource("4_pynfl")

[node name="Xaragiln Profile" parent="VBoxContainer/Kiki" instance=ExtResource("6_m4g6a")]
position = Vector2(49, 49)
scale = Vector2(0.5, 0.5)
colour = Color(0.521569, 0.0980392, 0.0588235, 1)

[node name="S" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(186, 98)
layout_mode = 2
size_flags_horizontal = 8
toggle_mode = true
button_group = ExtResource("2_kbdt3")
script = ExtResource("4_pynfl")

[node name="S Profile" parent="VBoxContainer/S" instance=ExtResource("5_tgwp7")]
position = Vector2(49, 49)
scale = Vector2(0.5, 0.5)

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.588
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.375977
grow_horizontal = 0
grow_vertical = 2
current_tab = 0
clip_tabs = false
tabs_visible = false

[node name="Minthe" parent="TabContainer" instance=ExtResource("1_623br")]
layout_mode = 2
metadata/_tab_index = 0

[node name="Baluma" parent="TabContainer" instance=ExtResource("1_623br")]
visible = false
layout_mode = 2
content = ExtResource("9_3j4wn")
metadata/_tab_index = 1

[node name="Kiki" parent="TabContainer" instance=ExtResource("1_623br")]
visible = false
layout_mode = 2
content = ExtResource("10_pynfl")
metadata/_tab_index = 2

[node name="S" parent="TabContainer" instance=ExtResource("1_623br")]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[connection signal="pressed" from="VBoxContainer/Minthe" to="." method="_on_minthe_pressed"]
[connection signal="pressed" from="VBoxContainer/Baluma" to="." method="_on_baluma_pressed"]
[connection signal="pressed" from="VBoxContainer/Kiki" to="." method="_on_kiki_pressed"]
[connection signal="pressed" from="VBoxContainer/S" to="." method="_on_s_pressed"]
